# s-lang

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
lib/: cli.py  main.py  pyproject.toml
lib/s_lang/: data_models.py  instructions.py  parse.py  runner.py
programs/: code.s  ex5b.s
s_lang/: __init__.py  data_models.py  data_types.py  execute.py  instructions.py  parse.py  runner.py  variables_store.py
server/: Dockerfile  api.py  pyproject.toml  requirements.txt
web/: index.html
web/assets/js/: script.js
