[tool.poetry]
name = "s-lang-mta"
version = "0.1.1"
description = "S lang interpreter"
authors = ["Tal Alon <talalon369@gmail.com>"]
readme = "README.md"
packages = [{include = "s_lang"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
