[tool.poetry]
name = "s-lang-api"
version = "0.1.0"
description = ""
authors = ["Tal Alon <talalon369@gmail.com>"]
readme = "README.md"
packages = [{include = "s_lang_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
s-lang-mta = "^0.1.3"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
